Header e navbar semi-finalizados

--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Portfólio de Gabriel Ventura</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <nav id="navbar">
+        <h1 id="nome"><span>Gabriel</span> <span>Ventura</span></h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><button id="btn-contato">Contato</button></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="main">
+      <div id="main-container">
+        <section id="sec-quem-sou">
+          <h2 class="subtitle">Quem sou?</h2>
+          <p class="paragrafo">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo
+            hendrerit nisi, eget ultrices leo malesuada nec.
+          </p>
+        </section>
+
+        <section id="sec-projetos">
+          <h2 class="subtitle">Meus projetos</h2>
+          <div class="grid-container">
+            <div class="projeto">Projeto 01</div>
+            <div class="projeto">Projeto 02</div>
+            <div class="projeto">Projeto 03</div>
+            <div class="projeto">Projeto 04</div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
