--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Importando menu hamburguer -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfólio de Gabriel Ventura</title>
   </head>
   <body>
+    <!-- Começo Header -->
     <header id="header">
+      <!-- Começo navbar (Desktop) -->
       <nav id="navbar">
         <h1 id="nome"><span>Gabriel</span> <span>Ventura</span></h1>
         <ul>
@@ -16,30 +23,32 @@
           <li><a href="#">Projetos</a></li>
           <li><button id="btn-contato">Contato</button></li>
         </ul>
+        <button id="menu-btn">
+          <span class="material-symbols-outlined"> menu </span>
+        </button>
       </nav>
-    </header>
-
-    <main id="main">
-      <div id="main-container">
-        <section id="sec-quem-sou">
-          <h2 class="subtitle">Quem sou?</h2>
-          <p class="paragrafo">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo
-            hendrerit nisi, eget ultrices leo malesuada nec.
-          </p>
-        </section>
-
-        <section id="sec-projetos">
-          <h2 class="subtitle">Meus projetos</h2>
-          <div class="grid-container">
-            <div class="projeto">Projeto 01</div>
-            <div class="projeto">Projeto 02</div>
-            <div class="projeto">Projeto 03</div>
-            <div class="projeto">Projeto 04</div>
-          </div>
-        </section>
+      <div class="mobile-menu">
+        <div class="mobile-menu-container">
+          <h1 id="nome"><span>Gabriel</span> <span>Ventura</span></h1>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+            <li><button id="btn-contato">Contato</button></li>
+          </ul>
+        </div>
       </div>
-    </main>
+      <!-- Fim navbar(Desktop) -->
+    </header>
+    <!-- Fim Header -->
+
+    <!-- Começo main -->
+    <main id="main">
+      <!-- Começo container -->
+      <!-- <div id="container">
+        <h2 class="subtitle">Quem sou?</h2>
+      </div>
+    </main> -->
 
     <script src="js/script.js"></script>
   </body>
