--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfólio de Gabriel Ventura</title>
   </head>
@@ -22,7 +24,7 @@
     <header id="header">
       <!-- Começo navbar (Desktop) -->
       <nav id="navbar">
-        <h1 id="nome"><span>Gabriel</span> <span>Ventura</span></h1>
+        <h1 id="nome"><span><code><</code>Gabriel</span> <span>Ventura<code>/></code></span></h1>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Sobre</a></li>
@@ -35,7 +37,7 @@
       </nav>
       <div class="mobile-menu">
         <div class="mobile-menu-container">
-          <h1 id="nome"><span>Gabriel</span> <span>Ventura</span></h1>
+          <span><code><</code>Gabriel</span> <span>Ventura<code>/></code>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
@@ -50,11 +52,15 @@
 
     <!-- Começo main -->
     <main id="main">
-      <!-- Começo container -->
-      <!-- <div id="container">
-        <h2 class="subtitle">Quem sou?</h2>
+      <div id="container">
+        <section id="main-container">
+        <div id="main-content">
+          <h2>Oi, eu sou o Gabriel!</h2>
+          <p>Front-End | FullStack Developer</p>
+        </div>
       </div>
-    </main> -->
+    </section>
+    </main>
 
     <script src="js/script.js"></script>
   </body>
