Atualizações de #nome, começo da section principal de apresentação

--- a/index.html
+++ b/index.html
@@ -23,27 +23,29 @@
     <!-- Começo Header -->
     <header id="header">
       <!-- Começo navbar (Desktop) -->
-      <nav id="navbar">
-        <h1 id="nome"><span><code><</code>Gabriel</span> <span>Ventura<code>/></code></span></h1>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Projetos</a></li>
-          <li><button id="btn-contato">Contato</button></li>
-        </ul>
-        <button id="menu-btn">
-          <span class="material-symbols-outlined"> menu </span>
-        </button>
-      </nav>
-      <div class="mobile-menu">
-        <div class="mobile-menu-container">
-          <span><code><</code>Gabriel</span> <span>Ventura<code>/></code>
+      <div id="header-container">
+        <nav id="navbar">
+          <h1 id="nome"><span><code><</code>Gabriel</span> <span>Ventura<code>/></code></span></h1>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Projetos</a></li>
             <li><button id="btn-contato">Contato</button></li>
           </ul>
+          <button id="menu-btn">
+            <span class="material-symbols-outlined"> menu </span>
+          </button>
+        </nav>
+        <div class="mobile-menu">
+          <div class="mobile-menu-container">
+            <span><code><</code>Gabriel</span> <span>Ventura<code>/></code>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Sobre</a></li>
+              <li><a href="#">Projetos</a></li>
+              <li><button id="btn-contato">Contato</button></li>
+            </ul>
+          </div>
         </div>
       </div>
       <!-- Fim navbar(Desktop) -->
