Melhorias no header, transparencia na navbar, otimização do código.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
       </div>
     </section>
+    <div id="rolar-tela">aa</div>
     </main>
 
     <script src="js/script.js"></script>
