--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div id="container">
         <section id="main-container">
         <div id="main-content">
-          <h2>Oi, eu sou o Gabriel!</h2>
-          <p>Front-End | FullStack Developer</p>
+          <h2 class="typing-text"></h2>
+          <p class="typing-text"></p>
         </div>
       </div>
     </section>
