atualizações feitas no tempo livre

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <div class="mobile-menu">
           <div class="mobile-menu-container">
-            <span><code><</code>Gabriel</span> <span>Ventura<code>/></code>
+            <h1 id="nome"><span><code><</code>Gabriel</span> <span>Ventura<code>/></code></span></h1>
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">Sobre</a></li>
@@ -55,16 +55,22 @@
     <!-- Começo main -->
     <main id="main">
       <div id="container">
-        <section id="main-container">
-        <div id="main-content">
-          <h2 class="typing-text"></h2>
-          <p class="typing-text"></p>
+        <section id="main-container" class="sec-padronizar">
+          <div id="main-content">
+            <h2 class="typing-text"></h2>
+            <p></p>
+          </section>
+          </div>
         </div>
       </div>
-    </section>
-    <div id="rolar-tela">aaaa</div>
-    </main>
-
+      <section id="section-sobre" class="sec-padronizar">
+        <h1>sobre</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
+      </section>
+      <section id="section-projetos" class="sec-padronizar">
+        <h1>Projetos</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
+      </section>
     <script src="js/script.js"></script>
   </body>
 </html>
