Adição de fotos em conhecimentos, e adicionando a devida responsividade

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </div>
     <section id="section-sobre" class="sec-padronizar">
       <h1 class="sec-title">Sobre mim</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
-        <h1>Conhecimentos</h1>
+        <p class="sec-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
+        <h1 class="sec-title">Conhecimentos</h1>
         <div id="imgs-main">
           <img src="./imgs/html-logo.png" alt="html-logo" class="img-main">
           <img src="./imgs/css-logo.png" alt="css-logo" class="img-main">
@@ -76,7 +76,7 @@
       </section>
       <section id="section-projetos" class="sec-padronizar">
         <h1 class="sec-title">Projetos</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
+        <p class="sec-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
       </section>
     <script src="js/script.js"></script>
   </body>
