Adicionado mais imagens sobre meus conhecimentos

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           <img src="./imgs/html-logo.png" alt="html-logo" class="img-main">
           <img src="./imgs/css-logo.png" alt="css-logo" class="img-main">
           <img src="./imgs/js-logo.png" alt="js-logo" class="img-main">
+          <img src="./imgs/nodejs-logo.png" alt="js-logo" class="img-main">
+          <img src="./imgs/react-logo.png" alt="js-logo" class="img-main">
+          <img src="./imgs/php-logo.png" alt="js-logo" class="img-main">
+          <img src="./imgs/sql-logo.png" alt="js-logo" class="img-main">
         </div>
       </section>
       <section id="section-projetos" class="sec-padronizar">
