Adição do sobre mim

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     </div>
     <section id="section-sobre" class="sec-padronizar">
       <h1 class="sec-title">Sobre mim</h1>
-      <p class="sec-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
+      <p class="sec-paragraph">
+        Me chamo Gabriel Ventura, um desenvolvedor dedicado apaixonado por Front-End e Back-End. Desde os 11 anos, quando comecei a estudar WebDesign, descobri minha vocação. Depois de um tempo afastado por motivos escolares, retomei meus estudos e redescobri minha paixão pela programação. A habilidade de resolver problemas e criar aplicações é fascinante para mim. Acredito que o tempo é nosso recurso mais valioso e a programação pode otimizá-lo. Meu objetivo é resolver problemas, transformar ideias e facilitar o trabalho das pessoas, oferecendo mais tempo por meio da programação. </p>
       <h1 class="sec-title">Conhecimentos</h1>
       <div id="imgs-main">
         <img src="./imgs/html-logo.png" alt="html-logo" class="img-main">
@@ -79,7 +80,8 @@
     </section>
     <section id="section-projetos" class="sec-padronizar">
       <h1 class="sec-title">Projetos</h1>
-      <p class="sec-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi doloremque, reiciendis cupiditate nihil possimus earum praesentium ducimus culpa nesciunt quisquam? Facere aperiam cumque vitae officiis amet nostrum et labore, ea repellendus error in harum mollitia sint. Optio unde assumenda cum repudiandae ut placeat nulla, temporibus fugit illo earum maiores cumque.</p>
+      <p class="sec-paragraph">
+        Coming soon...</p>
       </section>
     <script src="js/script.js"></script>
   </body>
