--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- Importando menu hamburguer -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
 
+<!-- Inicio importar fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+<!-- Fim importar fontes -->
 
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfólio de Gabriel Ventura</title>
@@ -79,9 +85,49 @@
       </div>
     </section>
     <section id="section-projetos" class="sec-padronizar">
-      <h1 class="sec-title">Projetos</h1>
-      <p class="sec-paragraph">
-        Coming soon...</p>
+      <div>
+        <h1 class="sec-title" id="sec-title-main">Projetos Recentes</h1>
+      </div>
+      <div class="cards">
+        <div class="card card-1">
+          <img src="#" alt="">foto
+          <h2>Titulo</h2>
+          <p>Explicação</p>
+          <a href="#">Acesse</a>
+        </div>
+        <div class="card card-2">
+          <img src="#" alt="">foto
+          <h2>Titulo</h2>
+          <p>Explicação</p>
+          <a href="#">Acesse</a>
+        </div>
+        <div class="card card-3">
+          <img src="#" alt="">foto
+          <h2>Titulo</h2>
+          <p>Explicação</p>
+          <a href="#">Acesse</a>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="card card-4">
+          <img src="#" alt="">foto
+          <h2>Titulo</h2>
+          <p>Explicação</p>
+          <a href="#">Acesse</a>
+        </div>
+        <div class="card card-5">
+          <img src="#" alt="">foto
+          <h2>Titulo</h2>
+          <p>Explicação</p>
+          <a href="#">Acesse</a>
+        </div>
+        <div class="card card-6">
+          <img src="#" alt="">foto
+          <h2>Titulo</h2>
+          <p>Explicação</p>
+          <a href="#">Acesse</a>
+        </div>
+      </div>
       </section>
     <script src="js/script.js"></script>
   </body>
