--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <!-- Import icones footer redes -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Inicio importar fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -129,6 +133,17 @@
         </div>
       </div>
       </section>
-    <script src="js/script.js"></script>
+      <!-- Footer -->
+      <footer>
+        <h2><a href="index.html"><code style="color: green;">> </code>Portfólio</a><code style="color: green;"> <</code></h2>
+          <p><code style="color: green;">< </code >Desenvolvido por Gabriel Ventura<code style="color: green;"> /></code></p>
+      <div class="icons">
+        <a class="social-icon" target="blank_" href="https://www.linkedin.com/in/gabriel-ventura-13028b208/"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a>
+        <a class="social-icon" target="blank_" href="https://github.com/gbxventura"><i class="fa fa-github" style="font-size:36px"></i></a>
+        <a class="social-icon" target="blank_" href="https://www.instagram.com/gbxventura/"><i class="fa fa-instagram" style="font-size:36px"></i></a>
+      </div>
+    </footer>
+    <script src="js/script.js">
+    </script>
   </body>
 </html>
