--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <nav id="navbar">
           <h1 id="nome"><span><code><</code>Gabriel</span> <span>Ventura<code>/></code></span></h1>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="#container">Home</a></li>
+            <li><a href="#section-sobre">Sobre</a></li>
+            <li><a href="#section-projetos">Projetos</a></li>
             <li><button id="btn-contato">Contato</button></li>
           </ul>
           <button id="menu-btn">
@@ -50,9 +50,9 @@
           <div class="mobile-menu-container">
             <h1 id="nome"><span><code><</code>Gabriel</span> <span>Ventura<code>/></code></span></h1>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Sobre</a></li>
-              <li><a href="#">Projetos</a></li>
+              <li><a href="#container">Home</a></li>
+              <li><a href="#section-sobre">Sobre</a></li>
+              <li><a href="#section-projetos">Projetos</a></li>
               <li><button id="btn-contato">Contato</button></li>
             </ul>
           </div>
